2003-02-27  Bill Bumgarner  <bbum@codefab.com>
    * Lib/AppKit/__init__.py (NSTableViewDelegate): Added NSTableViewDelegate
      declaration and updated TableModel2 example.

2003-02-25  Bill Bumgarner  <bbum@codefab.com>
    * Restructured Modules/ to reflect the division between modules.  Names
      are the same as their framework counterparts as much as possible.

2003-02-24  Bill Bumgarner  <bbum@codefab.com>
    * Moved code generation scripts to Scripts/CodeGenerators.  Added a very
      basic README to CodeGenerators.
    * setup.py: Set USE_ADJUST_REFCOUNTS to 0 because that has been the
      behavior in the bridge for quite some time.

2003-02-15  Bill Bumgarner  <bbum@codefab.com>
    * Modules/objc/objc_support.m: Invocation now uses alloc/init instead of
      +invocationWith... class method.  This prevents spurious "no pool, just
      leaking" errors from certain threaded situations.
    * Modules/Cocoa/NSAutoreleasePoolSupport.m: Fixed a really stupid memory
      leak in pop pool.

2003-02-06  Bill Bumgarner  <bbum@codefab.com>
    * Lib/Foundation/test/test_nsstring.py: Added another test from David
      E. that demonstrates issues with string encoding.

2003-02-04  Bill Bumgarner  <bbum@codefab.com>
    * Lib/AppKit/test/test_nscell.py (TestNSCell.testFloat): Added unit test
      from David Eppstein.
    * objc_support.m (depythonify_c_value): Now uses OC_PythonString to
      encapsulate strings.
    * OC_PythonString.m: implemented.  Class should be optimized by covering
      the various random utility/extension methods in NSString's API as
      transparent call-throughs to the appropriate method/function on the
      encapsulated CFString.
    * OC_Python*.m: fixed -dealloc to call super.

2003-02-03  Bill Bumgarner  <bbum@codefab.com>
    * Lib/Foundation/test/test_nsundomanager.py: Added integer test from
      David Eppstein
    * _convenience.py:  removed mapping of __repr__ to -description